NEWS file for Transmission <http://transmission.m0k.org/>

0.92 (2007/xx/yy)
- OS X:
   + Leopard: Fix bug with typing values in Inspector->Options
   + Leopard: Fix bug with toggling Minimal View

0.91 (2007/10/28)
- libtransmission (all platforms):
   + Fix 0.90 speed limits
   + Fix 0.90 problems announcing to some trackers
   + Fix 0.90 socket connection leak
   + Fix 0.90 IPC crash
   + Fix 0.90 cache bug that could cause "verify local files" to fail
   + Fix 0.90 build errors on OpenBSD and on older C compilers
- OS X:
   + Fix a crash caused by custom sound files
   + Add Dutch localization, re-add Russian localization, fix Korean localization
- GTK:
   + Fix 0.90 packaging errors
   + Fix 0.90 crash-on-start with assertion failure: "destination != (void*)0"

0.90 (2007/10/23)
 - Encryption support, with option to ignore unencrypted peers
 - Ban peers that send too much bad data
 - Only report downloaded, verified good pieces in tracker `download' field
 - Improved compliance with BitTorrent spec
 - MSE Tracker Extension support
 - Significant rewrite of the libtransmission back-end
 - Icon enhanced to support size of 512 x 512
 - OS X:
   + Per-torrent action menu
   + Redesigned inspector with additional statistics and ability to be resized vertically in Peers and Files tabs
   + Redesigned message log
   + Optimizations to decrease memory usage
   + Sort and filter by tracker
   + Various smaller interface additions and improvements
 - GTK:
   + Various interface improvements
   + Better compliance with the Gnome interface guidelines

0.82 (2007/09/09)
 - Fixed bug that could limit transfer speeds
 - Fixed bug that corrupted torrents > 4 GB
 - Fixed bug that could allow bad peers to send too many pieces
 - For peers supporting both Azureus's and LibTorrent's extensions, allow negotiation to decide which to use
 - Other minor fixes

0.81 (2007/08/22)
 - Fix 0.80 assertion crashes
 - Fix a bug that miscounted how many peers Transmission wants connected